[gd_scene load_steps=4 format=3 uid="uid://cc067o1siovev"]

[ext_resource type="Script" uid="uid://dmwchv8n6ph23" path="res://scenes/main/main.gd" id="1_hyk8p"]
[ext_resource type="PackedScene" uid="uid://jjylx4hqhug4" path="res://scenes/audio_manager/AudioManager.tscn" id="2_ow5a4"]
[ext_resource type="PackedScene" uid="uid://cqmqwoe520g4p" path="res://scenes/label_delay/label_delay.tscn" id="3_l3cfh"]

[node name="Main" type="Node"]
script = ExtResource("1_hyk8p")

[node name="AudioManager" parent="." instance=ExtResource("2_ow5a4")]
unique_name_in_owner = true

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="MarginContainerTop" type="MarginContainer" parent="UI"]
offset_right = 6.0
offset_bottom = 6.0

[node name="LabelTop" parent="UI/MarginContainerTop" instance=ExtResource("3_l3cfh")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="MarginContainerBottom" type="MarginContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_right = 256.0
grow_vertical = 0

[node name="LabelBottom" parent="UI/MarginContainerBottom" instance=ExtResource("3_l3cfh")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="MarginContainerNarration" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelNarration" parent="UI/MarginContainerNarration" instance=ExtResource("3_l3cfh")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="ColorRectBlack" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
